--- a/training/peft-falcon-7b-int4.ipynb
+++ b/training/peft-falcon-7b-int4.ipynb
@@ -87,7 +87,7 @@
      "output_type": "stream",
      "text": [
       "dataset size: 15011\n",
-      "{'instruction': 'What causes revenue to decline?', 'context': '', 'response': 'In general, lower volume of sales or lower average selling price causes revenue to decline.', 'category': 'open_qa'}\n"
+      "{'instruction': 'From the passage identify the domains in which Hermes is considered a God. Display the results in a comma separated format.', 'context': \"Hermes (Ἑρμῆς, Hērmês)\\n\\nGod of boundaries, travel, trade, communication, language, writing, cunning and thieves. Hermes was also responsible for protecting livestock and presided over the spheres associated with fertility, music, luck, and deception. The son of Zeus and Maia, Hermes is the messenger of the gods, and a psychopomp who leads the souls of the dead into the afterlife. He was depicted either as a handsome and athletic beardless youth, or as an older bearded man. His attributes include the herald's wand or caduceus, winged sandals, and a traveler's cap. His sacred animals include the tortoise. His Roman counterpart is Mercury.\", 'response': 'boundaries, travel, trade, communication, language, writing, cunning,thieves', 'category': 'information_extraction'}\n"
      ]
     }
    ],
@@ -144,10 +144,16 @@
      "output_type": "stream",
      "text": [
       "### Instruction\n",
-      "What is non dual philosophy?\n",
+      "Which artist recorded the album Moonlight Madness?\n",
+      "\n",
+      "### Context\n",
+      "Moonlight Madness is the second studio album by singer Teri DeSario, released in 1979 by Casablanca Records and Filmworks (NBLP-7178). It includes the hit single \"Yes, I'm Ready\", a duet with K.C. of KC and the Sunshine Band.\n",
+      "The album contains mostly disco music, including \"Dancin' in the Streets\" and \"I'm Ready\".\n",
       "\n",
       "### Answer\n",
-      "The word non dual refers to things or experiences that happen to us which has the  characteristics of uniformity. As an example in daily life we see or experience highs and lows, haves and have nots that result in emotions or feelings of happiness or sadness. The concept of non duality is to go deep within and understand that everything is temporary, and experience things before human thought labels each experience as good or bad.\n"
+      "Singer Teri DeSario recorded Moonlight Madness, tracks on the album are mostly in the disco music category and includes the hit single Yes I’m Ready and Dancin in the Streets. \n",
+      "\n",
+      "The album was first released on sale in 1979 on Casablanca Records and Moonlight Madness was the second studio album recorded by DeSario.\n"
      ]
     }
    ],
@@ -167,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,10 +211,10 @@
      "output_type": "stream",
      "text": [
       "### Instruction\n",
-      "What is the difference between UI design, UX design and Product design?\n",
+      "What is the national day of Germany?\n",
       "\n",
       "### Answer\n",
-      "While all of these types of design are related, there are several key differences. UI design focuses on the actual visual design of an experience and the look and feel of the controls. UX design is all about the actual flows, steps or scenarios that the experience is addressing. The order of the flow, the type of controls used, and how related various elements are to each other. Product design goes one step deeper, and asks the question of if the experience is solving the right problems for users, or addressing actual user needs.<|endoftext|>\n",
+      "The National Day of Germany is called German Unity Day. It is celebrated on 3 October as a public holiday. This day commemorates the reunification of West and East Germany after which since the end of second world war in 1945, Federal Republic of Germany existed as a single German state.<|endoftext|>\n",
       "Total number of samples: 1368\n"
      ]
     }
@@ -293,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +315,7 @@
       " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
       "================================================================================\n",
       "bin /opt/conda/envs/pytorch/lib/python3.9/site-packages/bitsandbytes/libbitsandbytes_cuda117.so\n",
-      "CUDA SETUP: CUDA runtime path found: /opt/conda/envs/pytorch/lib/libcudart.so\n",
+      "CUDA SETUP: CUDA runtime path found: /opt/conda/envs/pytorch/lib/libcudart.so.11.0\n",
       "CUDA SETUP: Highest compute capability among GPUs detected: 8.6\n",
       "CUDA SETUP: Detected CUDA version 117\n",
       "CUDA SETUP: Loading binary /opt/conda/envs/pytorch/lib/python3.9/site-packages/bitsandbytes/libbitsandbytes_cuda117.so...\n"
@@ -319,7 +325,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/pytorch/lib/python3.9/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: Found duplicate ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] files: {PosixPath('/opt/conda/envs/pytorch/lib/libcudart.so'), PosixPath('/opt/conda/envs/pytorch/lib/libcudart.so.11.0')}.. We'll flip a coin and try one of these, in order to fail forward.\n",
+      "/opt/conda/envs/pytorch/lib/python3.9/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: Found duplicate ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] files: {PosixPath('/opt/conda/envs/pytorch/lib/libcudart.so.11.0'), PosixPath('/opt/conda/envs/pytorch/lib/libcudart.so')}.. We'll flip a coin and try one of these, in order to fail forward.\n",
       "Either way, this might cause trouble in the future:\n",
       "If you get `CUDA error: invalid device function` errors, the above might be the cause and the solution is to make sure only one ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] in the paths that we search based on your env.\n",
       "  warn(msg)\n"
@@ -331,7 +337,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.007943391799926758,
+       "elapsed": 0.0070455074310302734,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -345,7 +351,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7748fc5cf5a7427087d0608af7c2b9a6",
+       "model_id": "7bb5a6e0acda4425be20114ef2bf079f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,9 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 130,547,712 || all params: 3,739,292,544 || trainable%: 3.4912409356543783\n"
+     ]
+    }
+   ],
    "source": [
     "from peft import LoraConfig, prepare_model_for_kbit_training, get_peft_model\n",
     "\n",
@@ -429,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +451,7 @@
     "\n",
     "args = TrainingArguments(\n",
     "    output_dir=\"falcon-7b-int4-dolly\",\n",
-    "    num_train_epochs=3,\n",
+    "    num_train_epochs=1,\n",
     "    per_device_train_batch_size=2,\n",
     "    gradient_accumulation_steps=2,\n",
     "    gradient_checkpointing=True,\n",
@@ -463,17 +477,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trainable params: 130,547,712 || all params: 3,739,292,544 || trainable%: 3.4912409356543783\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import Trainer\n",
     "\n",
@@ -516,8 +522,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='77' max='1026' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  77/1026 18:04 < 3:48:39, 0.07 it/s, Epoch 0.22/3]\n",
+       "      <progress value='159' max='342' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [159/342 37:44 < 44:00, 0.07 it/s, Epoch 0.46/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -529,31 +535,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>2.472300</td>\n",
+       "      <td>2.471900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
-       "      <td>2.180500</td>\n",
+       "      <td>2.181000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
-       "      <td>2.058800</td>\n",
+       "      <td>2.058900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>40</td>\n",
-       "      <td>2.039700</td>\n",
+       "      <td>2.040500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>1.987700</td>\n",
+       "      <td>1.988400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>60</td>\n",
-       "      <td>1.902700</td>\n",
+       "      <td>1.903200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>70</td>\n",
-       "      <td>1.942700</td>\n",
+       "      <td>1.944700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>80</td>\n",
+       "      <td>1.880400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>90</td>\n",
+       "      <td>1.875500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>1.880100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>110</td>\n",
+       "      <td>1.893000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>120</td>\n",
+       "      <td>1.889300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>130</td>\n",
+       "      <td>1.915100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>140</td>\n",
+       "      <td>1.878800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>150</td>\n",
+       "      <td>1.862300</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -564,6 +602,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=342, training_loss=1.900343998830918, metrics={'train_runtime': 4934.7375, 'train_samples_per_second': 0.277, 'train_steps_per_second': 0.069, 'total_flos': 5.789061773210419e+16, 'train_loss': 1.900343998830918, 'epoch': 1.0})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -603,7 +651,7 @@
     "config = PeftConfig.from_pretrained(args.output_dir)\n",
     "\n",
     "# load base LLM model and tokenizer\n",
-    "model = AutoModelForCausalLM.from_pretrained(config.base_model_name_or_path, device_map=\"auto\", torch_dtype=torch.bfloat16, lo)\n",
+    "model = AutoModelForCausalLM.from_pretrained(config.base_model_name_or_path, device_map=\"auto\", torch_dtype=torch.bfloat16)\n",
     "tokenizer = AutoTokenizer.from_pretrained(config.base_model_name_or_path)\n",
     "\n",
     "# Load the Lora model\n",
