--- a/training/instruction-tune-llama-2-int4.ipynb
+++ b/training/instruction-tune-llama-2-int4.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,10 +163,10 @@
       "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
       "\n",
       "### Input:\n",
-      "22nd July 1947\n",
+      "Biathlon is a winter sport that mixes nordic skying and shooting. Depending on the format, athletes ski a loop 3 or 5 times, and shoot 5 targets between each. The targets are 50 meters away. For each missed target, the participant will ski one 150 meter long penalty loop. The winner is the athlete who completes the 3 or 5 loops first.\n",
       "\n",
       "### Response:\n",
-      "When was the Indian National Flag adopted\n",
+      "What is biathlon?\n",
       "\n"
      ]
     }
@@ -192,17 +192,43 @@
     "\n",
     "If you want to learn more about QLoRA and how it works, I recommend you to read the [Making LLMs even more accessible with bitsandbytes, 4-bit quantization and QLoRA](https://huggingface.co/blog/4bit-transformers-bitsandbytes) blog post.\n",
     "\n",
-    "First, we are going to load our model together with our quantization configuration."
+    "### Flash Attention\n",
+    "\n",
+    "Flash Attention is a an method that reorders the attention computation and leverages classical techniques (tiling, recomputation) to significantly speed it up and reduce memory usage from quadratic to linear in sequence length. It is based on the paper \"[FlashAttention: Fast and Memory-Efficient Exact Attention with IO-Awareness](https://arxiv.org/abs/2205.14135)\".\n",
+    "The TL;DR; accelerates training up to 3x. Learn more at [FlashAttention](https://github.com/Dao-AILab/flash-attention/tree/main). Flash Attention is currently only available for Ampere (A10, A40, A100, ...) & Hopper (H100, ...) GPUs. You can check if your GPU is supported and install it using the following command:\n",
+    "\n",
+    "_Note: If your machine has less than 96GB of RAM and lots of CPU cores, reduce the number of `MAX_JOBS`. On the `g5.2xlarge` we used `4`._\n",
+    "\n",
+    "```bash\n",
+    "python -c \"import torch; assert torch.cuda.get_device_capability()[0] >= 8, 'Hardware not supported for Flash Attention'\"\n",
+    "pip install ninja packaging\n",
+    "MAX_JOBS=4 pip install flash-attn --no-build-isolation\n",
+    "```\n",
+    "\n",
+    "_Installing flash attention can take quite a bit of time (10-45 minutes)._\n",
+    "\n",
+    "The example supports the use of Flash Attention for all Llama checkpoints, but is not enabled by default. To use Flash Attention comment in the code block below wich says  `# COMMENT IN TO USE FLASH ATTENTION`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "\n",
+    "use_flash_attention = False\n",
+    "\n",
+    "# COMMENT IN TO USE FLASH ATTENTION\n",
+    "# replace attention with flash attention \n",
+    "# if torch.cuda.get_device_capability()[0] >= 8:\n",
+    "#     from utils.llama_patch import replace_attn_with_flash_attn\n",
+    "#     print(\"Using flash attention\")\n",
+    "#     replace_attn_with_flash_attn()\n",
+    "#     use_flash_attention = True\n",
+    "\n",
     "\n",
     "# Hugging Face model id\n",
     "model_id = \"NousResearch/Llama-2-7b-hf\" # non-gated\n",
@@ -221,6 +247,12 @@
     "model = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, use_cache=False, device_map=\"auto\")\n",
     "model.config.pretraining_tp = 1 \n",
     "\n",
+    "# Validate that the model is using flash attention, by comparing doc strings\n",
+    "if use_flash_attention:\n",
+    "    from utils.llama_patch import forward    \n",
+    "    assert model.model.layers[0].self_attn.forward.__doc__ == forward.__doc__, \"Model is not using flash attention\"\n",
+    "\n",
+    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "tokenizer.padding_side = \"right\""
@@ -236,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +308,7 @@
     "args = TrainingArguments(\n",
     "    output_dir=\"llama-7-int4-dolly\",\n",
     "    num_train_epochs=3,\n",
-    "    per_device_train_batch_size=4,\n",
+    "    per_device_train_batch_size=6 if use_flash_attention else 4,\n",
     "    gradient_accumulation_steps=2,\n",
     "    gradient_checkpointing=True,\n",
     "    optim=\"paged_adamw_32bit\",\n",
@@ -301,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +379,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training took 03:08:00 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of `3.7$`. "
+    "The training without Flash Attention enabled took 03:08:00 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of `3.7$`. \n",
+    "The training with Flash Attention enabled took 02:08:00 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of `2.6$`.\n",
+    "\n",
+    "The results using Flash Attention are mind blowing and impressive, 1.5x faster and 30% cheaper."
    ]
   },
   {
@@ -362,45 +397,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005025625228881836,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Loading checkpoint shards",
-       "rate": null,
-       "total": 2,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afc466abc0584374944067a62076032c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "if use_flash_attention:\n",
+    "    # unpatch flash attention\n",
+    "    from utils.llama_patch import unplace_flash_attn_with_attn\n",
+    "    unplace_flash_attn_with_attn()\n",
+    "    \n",
     "import torch\n",
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import AutoTokenizer\n",
+    "\n",
     "\n",
     "args.output_dir = \"llama-7-int4-dolly\"\n",
     "\n",
@@ -420,60 +429,6 @@
    "metadata": {},
    "source": [
     "Let’s load the dataset again with a random sample to try to generate an instruction."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset json (/home/ubuntu/.cache/huggingface/datasets/databricks___json/databricks--databricks-dolly-15k-7427aa6e57c34282/0.0.0/e347ab1c932092252e717ff3f949105a4dd28b27e842dd53157d2f72e276c2e4)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prompt:\n",
-      "Plastic is made from oil, natural gas and even plant oils during refining of these oils into other products like gasoline.  Ethane and propane are created when treated with heat during a refinery process called cracking.  This turns the Ethane and propane into ethylene and propylene which are used with other chemical ingredients to create polymers that are the base of what plastic is made out of.\n",
-      "\n",
-      "Generated instruction:\n",
-      "Given this paragraph, where does plastic come from?\n",
-      "\n",
-      "Ground truth:\n",
-      "How is plastic made?\n"
-     ]
-    }
-   ],
-   "source": [
-    "from datasets import load_dataset \n",
-    "from random import randrange\n",
-    "\n",
-    "\n",
-    "# Load dataset from the hub and get a sample\n",
-    "dataset = load_dataset(\"databricks/databricks-dolly-15k\", split=\"train\")\n",
-    "sample = dataset[randrange(len(dataset))]\n",
-    "\n",
-    "prompt = f\"\"\"### Instruction:\n",
-    "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
-    "\n",
-    "### Input:\n",
-    "{sample['response']}\n",
-    "\n",
-    "### Response:\n",
-    "\"\"\"\n",
-    "\n",
-    "input_ids = tokenizer(prompt, return_tensors=\"pt\", truncation=True).input_ids.cuda()\n",
-    "# with torch.inference_mode():\n",
-    "outputs = model.generate(input_ids=input_ids, max_new_tokens=100, do_sample=True, top_p=0.9,temperature=0.9)\n",
-    "\n",
-    "print(f\"Prompt:\\n{sample['response']}\\n\")\n",
-    "print(f\"Generated instruction:\\n{tokenizer.batch_decode(outputs.detach().cpu().numpy(), skip_special_tokens=True)[0][len(prompt):]}\")\n",
-    "print(f\"Ground truth:\\n{sample['instruction']}\")"
    ]
   },
   {
