--- a/training/instruction-tune-llama-2-int4.ipynb
+++ b/training/instruction-tune-llama-2-int4.ipynb
@@ -101,9 +101,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset json (/home/ubuntu/.cache/huggingface/datasets/databricks___json/databricks--databricks-dolly-15k-7427aa6e57c34282/0.0.0/e347ab1c932092252e717ff3f949105a4dd28b27e842dd53157d2f72e276c2e4)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset size: 15011\n",
+      "{'instruction': 'On what month and day was Antwan Deon Odom born?', 'context': 'Antwan Deon Odom (born September 24, 1981) is a former American football defensive end. He was drafted by the Tennessee Titans in the second round of the 2004 NFL Draft. He played college football at Alabama. He has also played for the Cincinnati Bengals.', 'response': 'September 24', 'category': 'closed_qa'}\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "from random import randrange\n",
@@ -163,10 +179,11 @@
       "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
       "\n",
       "### Input:\n",
-      "Biathlon is a winter sport that mixes nordic skying and shooting. Depending on the format, athletes ski a loop 3 or 5 times, and shoot 5 targets between each. The targets are 50 meters away. For each missed target, the participant will ski one 150 meter long penalty loop. The winner is the athlete who completes the 3 or 5 loops first.\n",
+      "U.S. cities in the list: Chicago, New York, Atlanta, Honolulu, Austin\n",
+      "U.S. states in the list: Montana, New York, Florida, South Dakota\n",
       "\n",
       "### Response:\n",
-      "What is biathlon?\n",
+      "Which are the U.S. cities and which are U.S. states in this list? Montana, Chicago, New York, Atlanta, Honolulu, Florida, Austin, South Dakota\n",
       "\n"
      ]
     }
@@ -212,9 +229,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.006969451904296875,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Loading checkpoint shards",
+       "rate": null,
+       "total": 2,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3b7caee136b47528f5606c5f95c20e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
@@ -363,9 +412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a LlamaTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    }
+   ],
    "source": [
     "# train\n",
     "trainer.train() # there will not be a progress bar since tqdm is disabled\n",
@@ -429,6 +486,38 @@
    "metadata": {},
    "source": [
     "Let’s load the dataset again with a random sample to try to generate an instruction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset \n",
+    "from random import randrange\n",
+    "\n",
+    "\n",
+    "# Load dataset from the hub and get a sample\n",
+    "dataset = load_dataset(\"databricks/databricks-dolly-15k\", split=\"train\")\n",
+    "sample = dataset[randrange(len(dataset))]\n",
+    "\n",
+    "prompt = f\"\"\"### Instruction:\n",
+    "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
+    "\n",
+    "### Input:\n",
+    "{sample['response']}\n",
+    "\n",
+    "### Response:\n",
+    "\"\"\"\n",
+    "\n",
+    "input_ids = tokenizer(prompt, return_tensors=\"pt\", truncation=True).input_ids.cuda()\n",
+    "# with torch.inference_mode():\n",
+    "outputs = model.generate(input_ids=input_ids, max_new_tokens=100, do_sample=True, top_p=0.9,temperature=0.9)\n",
+    "\n",
+    "print(f\"Prompt:\\n{sample['response']}\\n\")\n",
+    "print(f\"Generated instruction:\\n{tokenizer.batch_decode(outputs.detach().cpu().numpy(), skip_special_tokens=True)[0][len(prompt):]}\")\n",
+    "print(f\"Ground truth:\\n{sample['instruction']}\")"
    ]
   },
   {
