--- a/training/instruction-tune-llama-2-int4.ipynb
+++ b/training/instruction-tune-llama-2-int4.ipynb
@@ -163,10 +163,10 @@
       "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
       "\n",
       "### Input:\n",
-      "Biathlon is a winter sport that mixes nordic skying and shooting. Depending on the format, athletes ski a loop 3 or 5 times, and shoot 5 targets between each. The targets are 50 meters away. For each missed target, the participant will ski one 150 meter long penalty loop. The winner is the athlete who completes the 3 or 5 loops first.\n",
+      "Sir Dorabji Tata and Allied Trusts and Sir Ratan Tata Trust\n",
       "\n",
       "### Response:\n",
-      "What is biathlon?\n",
+      "What are the names of Tata trusts which Ratan Tata heads?\n",
       "\n"
      ]
     }
@@ -285,8 +285,7 @@
     "\n",
     "\n",
     "# prepare model for training\n",
-    "model = prepare_model_for_kbit_training(model)\n",
-    "model = get_peft_model(model, peft_config)"
+    "model = prepare_model_for_kbit_training(model)"
    ]
   },
   {
@@ -316,12 +315,22 @@
     "    save_strategy=\"epoch\",\n",
     "    learning_rate=2e-4,\n",
     "    bf16=True,\n",
+    "    fp16=False,\n",
     "    tf32=True,\n",
     "    max_grad_norm=0.3,\n",
     "    warmup_ratio=0.03,\n",
     "    lr_scheduler_type=\"constant\",\n",
-    "    disable_tqdm=True # disable tqdm since with packing values are in correct\n",
-    ")"
+    "    disable_tqdm=False,  # disable tqdm since with packing values are in correct\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Upcast layer for flash attnetion\n",
+    "if use_flash_attention:\n",
+    "    from utils.llama_patch import upcast_layer_for_flash_attention\n",
+    "    torch_dtype = torch.bfloat16 if args.bf16 else torch.float16 if args.fp16 else torch.float32\n",
+    "    model = upcast_layer_for_flash_attention(model, torch_dtype)\n",
+    "\n",
+    "model = get_peft_model(model, peft_config)\n"
    ]
   },
   {
@@ -463,11 +472,6 @@
     "# merged_model.push_to_hub(\"user/repo\")\n",
     "# tokenizer.push_to_hub(\"user/repo\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
