--- a/training/instruction-tune-llama-2-int4.ipynb
+++ b/training/instruction-tune-llama-2-int4.ipynb
@@ -179,11 +179,10 @@
       "Use the Input below to create an instruction, which could have been used to generate the input using an LLM. \n",
       "\n",
       "### Input:\n",
-      "U.S. cities in the list: Chicago, New York, Atlanta, Honolulu, Austin\n",
-      "U.S. states in the list: Montana, New York, Florida, South Dakota\n",
+      "Sir Dorabji Tata and Allied Trusts and Sir Ratan Tata Trust\n",
       "\n",
       "### Response:\n",
-      "Which are the U.S. cities and which are U.S. states in this list? Montana, Chicago, New York, Atlanta, Honolulu, Florida, Austin, South Dakota\n",
+      "What are the names of Tata trusts which Ratan Tata heads?\n",
       "\n"
      ]
     }
@@ -334,8 +333,7 @@
     "\n",
     "\n",
     "# prepare model for training\n",
-    "model = prepare_model_for_kbit_training(model)\n",
-    "model = get_peft_model(model, peft_config)"
+    "model = prepare_model_for_kbit_training(model)"
    ]
   },
   {
@@ -365,12 +363,22 @@
     "    save_strategy=\"epoch\",\n",
     "    learning_rate=2e-4,\n",
     "    bf16=True,\n",
+    "    fp16=False,\n",
     "    tf32=True,\n",
     "    max_grad_norm=0.3,\n",
     "    warmup_ratio=0.03,\n",
     "    lr_scheduler_type=\"constant\",\n",
-    "    disable_tqdm=True # disable tqdm since with packing values are in correct\n",
-    ")"
+    "    disable_tqdm=False,  # disable tqdm since with packing values are in correct\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Upcast layer for flash attnetion\n",
+    "if use_flash_attention:\n",
+    "    from utils.llama_patch import upcast_layer_for_flash_attention\n",
+    "    torch_dtype = torch.bfloat16 if args.bf16 else torch.float16 if args.fp16 else torch.float32\n",
+    "    model = upcast_layer_for_flash_attention(model, torch_dtype)\n",
+    "\n",
+    "model = get_peft_model(model, peft_config)\n"
    ]
   },
   {
@@ -552,11 +560,6 @@
     "# merged_model.push_to_hub(\"user/repo\")\n",
     "# tokenizer.push_to_hub(\"user/repo\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
