--- a/training/optimize-llama-2-gptq.ipynb
+++ b/training/optimize-llama-2-gptq.ipynb
@@ -140,7 +140,7 @@
     "\n",
     "# save the quantize model to disk\n",
     "save_folder = \"quantized_llama\"\n",
-    "model.save_pretrained(save_folder, safe_serialization=True)\n",
+    "quantized_model.save_pretrained(save_folder, safe_serialization=True)\n",
     "\n",
     "# load fresh, fast tokenizer and save it to disk\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id).save_pretrained(save_folder)\n",
